--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
 <h2>Olympic games app</h2>
-<hr />
+<app-information-box-list></app-information-box-list>
 <p>{{ (olympics$ | async) }} data loaded</p>
