modif subscribe observable et opti code

--- a/src/app/pages/country-detail/country-detail.component.html
+++ b/src/app/pages/country-detail/country-detail.component.html
@@ -1,4 +1,4 @@
-<p>{{ (olympics$ | async) }}</p>
+<p>{{ olympics$ }}</p>
 <h2 style="text-align:center"></h2>
 <div>
 <div><h3>Number of entries</h3> </div>
