--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,16 +1,21 @@
 .chart-container{
 width: 50%;
+height: 50%;
 margin: 20px;
 }
 
 .title{
+    max-width: fit-content;
+    max-height: fit-content;
     margin: 0 auto;
     background: rgba(4,131,143,255);
     color: aliceblue;
+    padding: 0;
 }
 
 #cadre{
-    max-width: 50%;
+    max-width: fit-content;
+    max-height: fit-content;
     padding: 5px;
     border: solid rgba(4,131,143,255) 4px ;
     border-radius: 15px;
@@ -20,18 +25,78 @@ margin: 20px;
 .flex-div{
     display: flex;
     justify-content: center;
-}
-
-.chart-container{
-    
+    margin: 5px;
+    #cadre{
+        margin: 20px;
+        padding: 15px;
+    }
 }
 
 .all-div{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
 canvas{
     margin: 0 auto;
+    max-width: 70%;
+    max-height: 70%;
     }
+
+h2{
+    font-weight: 100;
+    font-size: xx-large;
+}    
+    
+h2,h3{
+    margin: 0;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 820px) {
+    .flex-div {
+        display: flex;
+        justify-content: center;
+        margin: 3px;
+
+        #cadre {
+            margin: 10px;
+            padding: 7px;
+        }
+    }
+    h2{
+        font-size: 10vw;
+    }
+    button{
+        font-size: 7vw;
+    }
+    .title{
+        margin-bottom: 7vh;
+    }
+    .flex-div{
+        margin-bottom: 7vh;
+        font-size: 4vw;
+
+    }
+    body {
+        height: 1005px;
+
+    }
+
+    .all-div {
+        height: 98vh;
+        padding-top: 10vh;
+    }
+
+    .chart-container {
+        height: 30vh;
+        position: relative;
+        min-height: unset;
+    }
+
+    canvas {
+        width: 100%;
+    }
+
+}
