--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 
- <div class="all-div">
+<div class="all-div">
         <div id="cadre" class="title">
                 <h2 >Medals per Country</h2>
         </div>
@@ -11,10 +11,8 @@
                         Number of Country <h3>{{numberCountry}}</h3>
                 </div>
         </div>
-        <div class="chart">
+        <div>
                 <canvas baseChart 
-                height="700"
-                width="700"
                 [data]="pieChartData"
                 [colors]="pieChartColor" 
                 [labels]="pieChartLabels"
