--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,92 +1,99 @@
 .chart-container{
-width: 50%;
-height: 50%;
-margin: 20px;
-}
-
-.title{
-    max-width: fit-content;
-    max-height: fit-content;
-    margin: 0 auto;
-    background: rgba(4,131,143,255);
-    color: aliceblue;
-    padding: 0;
-}
-
-#cadre{
-    max-width: fit-content;
-    max-height: fit-content;
-    padding: 5px;
-    border: solid rgba(4,131,143,255) 4px ;
-    border-radius: 15px;
-    text-align: center;
-}
-
-.flex-div{
-    display: flex;
-    justify-content: center;
-    margin: 5px;
+    width: 50%;
+    height: 50%;
+    margin: 20px;
+    }
+    
+    .title{
+        max-width: fit-content;
+        max-height: fit-content;
+        margin: 0 auto;
+        background: rgba(4,131,143,255);
+        color: aliceblue;
+        padding: 0;
+    }
+    
     #cadre{
-        margin: 20px;
-        padding: 15px;
+        max-width: fit-content;
+        max-height: fit-content;
+        padding: 5px;
+        border: solid rgba(4,131,143,255) 4px ;
+        border-radius: 15px;
+        text-align: center;
     }
-}
-
-.all-div{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
     
-}
-
-canvas{
-    margin: 0 auto;
-    max-width: 70%;
-    max-height: 70%;
-    }
-
-h2{
-    font-weight: 100;
-    font-size: xx-large;
-}    
-    
-h2,h3{
-    margin: 0;
-}
-
-@media only screen and (min-device-width : 320px) and (max-device-width : 820px) {
-    .flex-div {
+    .flex-div{
         display: flex;
         justify-content: center;
-        margin: 3px;
-
-        #cadre {
-            margin: 10px;
-            padding: 7px;
+        margin: 5px;
+        #cadre{
+            margin: 20px;
+            padding: 15px;
         }
     }
-    h2{
-        font-size: 10vw;
+    
+    .all-div{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
     }
-    button{
-        font-size: 7vw;
-    }
-    .title{
-        margin-bottom: 7vh;
-    }
-    .flex-div{
-        margin-bottom: 7vh;
-        font-size: 4vw;
-
-    }
-    .all-div {
-        height: 80vh;
-        padding-top: 10vh;
-    }
-   
-}
-
-@media only screen and (min-device-width : 820px){
+    
     canvas{
+        margin: 0 auto;
+        max-width: 70%;
+        max-height: 70%;
+        }
+    
+    h2{
+        font-weight: 100;
+        font-size: xx-large;
+    }    
+        
+    h2,h3{
+        margin: 0;
     }
-}
+    
+    @media only screen and (min-device-width : 320px) and (max-device-width : 820px) {
+        .flex-div {
+            display: flex;
+            justify-content: center;
+            margin: 3px;
+    
+            #cadre {
+                margin: 10px;
+                padding: 7px;
+            }
+        }
+        h2{
+            font-size: 10vw;
+        }
+        button{
+            font-size: 7vw;
+        }
+        .title{
+            margin-bottom: 7vh;
+        }
+        .flex-div{
+            margin-bottom: 7vh;
+            font-size: 4vw;
+    
+        }
+            
+        .all-div {
+            height: 50vh;
+            padding-top: 10vh;
+        }
+    
+        .chart-container {
+            height: 30vh;
+            position: relative;
+            min-height: unset;
+        }
+    
+        canvas {
+            width: 100%;
+        }
+    
+    }
+    
